--- a/report/6-conclusions.tex
+++ b/report/6-conclusions.tex
@@ -1,5 +1,4 @@
-The main contribution of the paper is the Sliding Window-UCB algorithm, along with the analysis of the latter and Discounted-UCB.
+The main contribution of the paper is the Sliding Window-UCB algorithm, along with the analysis of the latter and Discounted-UCB.\\
 
-Our main critique is that the paper is not always clear.
-
+Our main critique is that the paper is not always clear.\\
 According to them, D-UCB and SW-UCB perform well on changing environments, unlike UCB1. In practice, we confirmed that UCB1 is the best on constant environments, but in abruptly changing environments it is harder to tell.
