--- a/report/5-critics.tex
+++ b/report/5-critics.tex
@@ -1,6 +1,6 @@
 We have several remarks regarding the paper.
 
-The obvious lack of rereading of the definition of \textit{SW-UCD} is definitely a pity, because it is at the root of their main contribution and the subsequent analysis and other paragraphs which follow.
+The obvious lack of rereading of the definition of \textit{SW-UCB} is definitely a pity, because it is at the root of their main contribution and the subsequent analysis and other paragraphs which follow.
 
 In general, the paper is not very clear. We soon get lost into computational details, without the authors helping us get the big picture out of it. At least, this is what we think, comparing with other papers. For example, if they had described the idea behind SW-UCB more, we might have understood their point.  This difficulty to follow is enhanced by the length of their demonstrations. However they tried to make them easier to follow by breaking them down into different steps.
 
